fix: improved on mobile

--- a/components/Carousel/Carousel.module.css
+++ b/components/Carousel/Carousel.module.css
@@ -28,11 +28,11 @@
 }
 
 .arrow-button > svg {
-  fill: var(--neutral-50);
+  fill: var(--highlight-clickable-50);
 }
 
 .arrow-button:hover > svg {
-  fill: var(--neutral-100);
+  fill: var(--highlight-clickable-100);
 }
 
 .arrow-button-right {
@@ -76,4 +76,35 @@
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
   image-rendering: crisp-edges;
+  aspect-ratio: 7 / 4;
+}
+
+.mobile-controls {
+  display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .carousel {
+    height: 100%;
+    justify-content: flex-start;
+  }
+
+  .progress {
+    margin-top: auto;
+  }
+
+  .controls {
+    display: none;
+  }
+
+  .mobile-controls {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mobile-controls > div {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
 }
