--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -41,6 +41,11 @@
     bottom: 0;
     margin: 0;
     border-radius: 0;
+    display: flex;
+  }
+
+  .scroll-box {
+    height: auto;
   }
 }
 
